src/test/ui/exclusive-range/exclusive_range_pattern_syntax_collision.stderr
error: `X..` range patterns are not supported
  --> $DIR/exclusive_range_pattern_syntax_collision.rs:5:13
   |
LL |         [_, 99.., _] => {},
   |             ^^^^ help: try using the maximum value for the type: `99..MAX`

error: arbitrary expressions aren't allowed in patterns
  --> $DIR/exclusive_range_pattern_syntax_collision.rs:5:13
   |
LL |         [_, 99.., _] => {},
   |             ^^^^

error[E0029]: only char and numeric types are allowed in range patterns
  --> $DIR/exclusive_range_pattern_syntax_collision.rs:5:13
   |
LL |         [_, 99.., _] => {},
   |             ^^^^ ranges require char or numeric types
   |
   = note: start type: {integer}
   = note: end type: [type error]

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0029`.
